app/assets/stylesheets/modules/_header.scss
//Header Container

.header-container{
	display: inline-block;
	width: 100%;
	padding-top: $nav-height;
  position: relative;
}

// Navigation

.mlts-nav {
  background: $dark-blue !important;
  font-size: 15px !important;
  a {
    font-family: $sans-light !important;
    color: white !important;
    @extend .transition;
    &:hover {
      opacity: 0.7 !important;
    }
  }
}

.icon-home {
  font-size: 2em !important;
  padding-top: 10px !important;
}

.navbar-brand {
  margin-left: 0px !important;
}

.navbar-right {
  margin-right: 0px !important;
}
.separator:before{
	content: '\00B7';
	position: absolute;
  top: 0;
  bottom: 0;
  left: -0.5em;
  margin: auto;
  height: 1.5em;
  font-size: 30px;
}

// Social Follow Buttons
.social-follow-buttons{
	text-align: center;
  background: $form-grey;

  @include larger-than(ex-large) {
    position: fixed;
    top: 4.4375em;
    z-index: 100;
    left: 1.1em;
    margin-top: 1.45em;
    background-color: transparent;
  }

	.fb-follow, .twitter-follow{
		margin-right: 0.5em;

    @include larger-than(ex-large) {
      float: left;
    }

		span{
			vertical-align: top !important;
		}
	}

	&:hover{
		opacity: 1;
	}
}



// Main Header
.main-header{
	width: 100%;
	background-image: url('/images/mobile-header-background.jpg');
	background-position: 50%;
  background-repeat: no-repeat;
  background-size: cover;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
  overflow: hidden;

	@include larger-than(extra-large) {
    background: none;
  }
}

// Video
.video-wrapper {
  display: block;
  background: black;
  position: absolute;
  top: 415px;
  left: 50%;
  background-size: cover;
  background: black;
  min-width: 100%;
  width: auto;
  -webkit-transform: translateX(-50%) translateY(-50%);
      -ms-transform: translateX(-50%) translateY(-50%);
          transform: translateX(-50%) translateY(-50%);
  display: none;

  @include larger-than(extra-large) {
    display: block;
  }

  video.preview{
    opacity: 0.6;
    width: auto;
    height: auto;
    min-width: 100%;
    min-height: 100%;
  }
}


// Header Wrapper
.header-wrapper{
	display: block;
	width: 90%;
	margin: 100px auto 0 auto;
	text-align: center;
	position: relative;
}


.center-content {
  display: table-cell;
  text-align: center;
  vertical-align: middle;
  padding-bottom: 3em;
}

.header-copy{
	display: none;
  @include smaller-than(mid-large) {
    padding-top: 2em;
    h1 {
      margin-bottom: 0.5em
    }
  }
	@include smaller-than(small) {
    padding-top: 0;
    padding-bottom: 4em;
  }
  &.active {
  	display: block;
  }
}

.header-nav{
	font-size: 0;
	font-family: $sans-light;
	display: inline-block;
}

.trailer-items{
	@extend .transition;
	display: inline-block;
	font-size: 16px;
	padding: 0.5em 2em 0.5em 3em;
	cursor: pointer;
	position: relative;
	border: 1px solid $transwhite;

	@include smaller-than(medium){
		width: 100%;
	}

	&:first-child{
		@include larger-than(medium){
			display: inline-block !important;
			border-radius: 5px 0 0 5px;
		}
		@include smaller-than(medium) {
			border-radius: 5px 5px 0 0;
		}
	}

  &:nth-child(2) {
    @include larger-than(medium){
      border-right: 0;
      border-left: 0;
    }
    @include smaller-than(medium) {
    	border-right: 1px solid $transwhite;
    	border-left: 1px solid $transwhite;
    	border-top: 0;
    	border-bottom: 0;
    }
  }

	&:last-child{
		@include larger-than(medium){
			display: inline-block !important;
			border-radius: 0 5px 5px 0;
		}
		@include smaller-than(medium) {
			border-radius: 0 0 5px 5px;
		}
	}


	.no-touch &{
		&:hover{
			background-color: rgba(255, 255, 255, 0.23);
		}
	}

	.touch &{
		display: block;
		@include smaller-than(mid-large) {
			border-radius: 5px;
      display: inline-block;
    }
  	&:first-child {
      @include larger-than(mid-large){
        border-radius: 5px 0 0 5px;
      }
  		@include smaller-than(medium) {
  			border-radius: 5px 5px 0 0;
  		}
  	}

    &:nth-child(2) {
      @include larger-than(mid-large){
        border-radius: 0;
      }
      @include smaller-than(medium) {
      	border-right: 1px solid $transwhite;
      	border-left: 1px solid $transwhite;
      	border-top: 0;
      	border-bottom: 0;
        border-radius: 0;
      }
    }
    &:last-child{
      @include larger-than(mid-large) {
        border-radius: 0 5px 5px 0;
      }
      @include smaller-than(medium) {
        border-radius: 0 0 5px 5px;
      }
    }
	}

  .icon:after{
    position: absolute;
  }

	.icon-play:after{
		left: -0.8em;
		top: -0.2em;
		font-size: 30px;
	}

	.icon-moviereel:after{
		left: -1em;
		top: 0em;
		font-size: 20px;
	}

	.icon-facebook:after{
		left: -1em;
		top: 0em;
		font-size: 20px;
	}
}

.trailer-icons{
	padding-left: 0.5em;
}

.header-reviews{
  display: none;
	bottom: 0.5em;
	left: 0;
	width: 100%;

  @include larger-than(extra-large) {
    display: block;
    min-height: 155px;
  }
}

.review-item {
	// // width: 25%;
	// padding: 1em;
  // font-family: $sans;
  // font-size: 0.95em;
	// a, span{
		// // display: block;
	// }

  // a[href=""]{
    // pointer-events: none;
    // cursor: text;
  // }

	// span{
		// font-family: $sans-bold;
	// }

  // @include smaller-than(huge) {
    // font-size: 0.9em;
  // }
  // @include smaller-than(more-large) {
    // font-size: 0.85em;
  // }
	// @include smaller-than(large) {
		// display: none;
	// }
}




// Carousel
.hero-control{
  &.left{
    left: -50px;
  }
  &.right{
    right: -50px;
  }

}




// Vimeo video
.trailer-video-container{
	display: none;
}

.vimeo-trailer{
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1;
}

